[package]
name = "rust_tutor_async"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = "0.1"

[[bin]]
name = "example_01_basic_async"
path = "src/examples/01_basic_async.rs"

[[bin]]
name = "example_02_async_await"
path = "src/examples/02_async_await.rs"

[[bin]]
name = "example_03_concurrent_tasks"
path = "src/examples/03_concurrent_tasks.rs"

[[bin]]
name = "example_04_channels"
path = "src/examples/04_channels.rs"

[[bin]]
name = "example_05_http_client"
path = "src/examples/05_http_client.rs"

[[bin]]
name = "example_06_file_operations"
path = "src/examples/06_file_operations.rs"

[[bin]]
name = "example_07_error_handling"
path = "src/examples/07_error_handling.rs"

[[bin]]
name = "example_08_streams"
path = "src/examples/08_streams.rs"

[[bin]]
name = "example_09_select_macro"
path = "src/examples/09_select_macro.rs"

[[bin]]
name = "example_10_advanced_patterns"
path = "src/examples/10_advanced_patterns.rs"
